templates/webdav_template.yaml
---
# Source: webdav/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
  labels:
    helm.sh/chart: webdav-0.0.7
    app.kubernetes.io/name: webdav
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: webdav
    app.kubernetes.io/instance: release-name
---
# Source: webdav/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
  labels:
    helm.sh/chart: webdav-0.0.7
    app.kubernetes.io/name: webdav
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webdav
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: f9ee1ee82d26d74e92c373e54b6631eb3bbe8330ddfd9fe81078e723d1321769
      labels:
        app.kubernetes.io/name: webdav
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: webdav
          securityContext:
            capabilities:
              add:
              - SYS_ADMIN
            privileged: true
          image: "httpd:2.4"
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash","-c"]
          args:
            - mkdir /usr/local/apache2/{webdav,var};
              touch /usr/local/apache2/var/DavLock;
              chown -R www-data:www-data /usr/local/apache2/webdav;
              chown -R www-data:www-data /usr/local/apache2/var;
              httpd-foreground
          volumeMounts:
            - name: httpd-conf
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
            - name: htpasswd
              mountPath: /usr/local/apache2/htpasswd.d/generated
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            {}
      volumes:
        - name: httpd-conf
          configMap:
            name: httpd-conf
            defaultMode: 0644
        - name: htpasswd
          configMap:
            name: htpasswd
            defaultMode: 0644
---
# Source: webdav/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdav
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: my-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdav
            port:
              number: 80
  tls:
  - hosts:
    - my-domain.com
    secretName: webdav-tls-secret
